# oatpp-socketio

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql.yml  flawfinder.yml
app/: CMakeLists.txt  engineio_server.cpp  sio_server.cpp
cmake/: Config.cmake.in  oatpp-socketio_config.h.in
include/oatpp_sio/: config.hpp  globals.hpp  message.hpp  util.hpp
include/oatpp_sio/eio/: connection.hpp  engineIo.hpp  messagePool.hpp  messageReceiver.hpp  wsConnection.hpp
include/oatpp_sio/eio/impl/: engineIoImpl.hpp
include/oatpp_sio/sio/: adapter.hpp  eioAdapter.hpp  namespace.hpp  namespaces.hpp  sioConnector.hpp  sioServer.hpp
include/oatpp_sio/webapi/: appComponent.hpp  swaggerComponent.hpp  webApp.hpp
include/oatpp_sio/webapi/adapter/: btaAdapter.hpp
include/oatpp_sio/webapi/controller/: eioController.hpp  sioController.hpp  sioServerController.hpp  staticContentsController.hpp
include/oatpp_sio/webapi/dto/: eioDto.hpp  sioDto.hpp
sio-client/: package-lock.json  package.json  tsconfig.json
sio-client/src/: index.ts  server.ts
src/: CMakeLists.txt  globals.cpp  util.cpp
src/eio/: connection.cpp  engineIoImpl.cpp  messagePool.cpp  wsConnection.cpp
src/sio/: adapter.cpp  eioAdapter.cpp  namespace.cpp  namespaces.cpp  sioConnector.cpp  sioServer.cpp  space.cpp
src/webapi/: swaggerComponent.cpp  webApi.cpp
